--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@
   border-radius: 9999px;
 }
 body {
+  width: 100%;
+  height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
